[package]
name = "battleship"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
flexi_logger = "0.27.3"
futures-util = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
prettytable-rs = "^0.10"
rand = "0.8.5"
rayon = "1.8.0"
rust_socketio = { git = "https://github.com/TiamoP23/rust-socketio-event-ack", version = "0.4.3", features = [
    "async",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.107" }
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "json",
] }
tokio = { version = "1", features = ["full"] }
